# MLOps

./: README.md
polars_learn/: Cargo.toml
polars_learn/src/: main.rs
read_csv/: Cargo.toml
read_csv/src/: reader.rs
rust-regression/: Cargo.toml
rust-regression/src/: linear_regression.rs  main.rs
smartcore_linear_regression/: Cargo.toml
smartcore_linear_regression/src/: main.rs
