[package]
name = "smartcore_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.28.0"
polars-core = {version = "0.28.0", features=["ndarray"]}
arrow = "38.0.0"
smartcore = "0.3.1"
serde = "1.0.126"
serde_derive = "1.0.126"